Fix third image carousel alignment issues

--- a/src/assets/css/thumbnail.css
+++ b/src/assets/css/thumbnail.css
@@ -3,7 +3,8 @@
     --pic-3-height: 100px;
     --active-width: 300px;
     --active-height: 150px;
-    --reel-3-width: 1300px;
+    --reel-3-width: 1350px;
+    --viewport-width: 710px;
     --thumbnail-width: 50px;
     --thumbnail-height: 25px;
 }
@@ -35,7 +36,7 @@
 .window {
     position: relative;
     display: flex;
-    width: 700px;
+    width: var(--viewport-width);
     overflow: hidden;
 }
 
